<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <include
        android:id="@+id/include1"
        layout="@layout/main_title"
        android:focusable="true" />
    
    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/ll_boder"
            android:padding="10dp" >

            <Button
                android:id="@+id/btn_notification"
                android:layout_width="@dimen/top_button_width"
                android:layout_height="@dimen/top_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/tz" />

            <TextView
                android:id="@+id/tz_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notification" 
                android:textColor="@color/bottom_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" 
            android:orientation="vertical"
            android:background="@drawable/ll_boder"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_news"
                android:layout_width="@dimen/top_button_width"
                android:layout_height="@dimen/top_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/xw"/>

            <TextView
                android:id="@+id/xw_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/news"
                android:textColor="@color/bottom_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/ll_boder"
            android:padding="10dp" >

            <Button
                android:id="@+id/btn_questnanswer"
                android:layout_width="@dimen/top_button_width"
                android:layout_height="@dimen/top_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/wd"/>

            <TextView
                android:id="@+id/wd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/questnanswer"
                android:textColor="@color/bottom_text" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/viewpager_height"
        android:layout_below="@+id/ll_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:orientation="horizontal" 
        android:background="@color/bottom_bar">

        <LinearLayout
            android:id="@+id/ll_information_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" 
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_infomation_center"
                android:layout_width="@dimen/bottom_button_width"
                android:layout_height="@dimen/bottom_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/xxzx" />

            <TextView
                android:id="@+id/xxzx_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/infomation_center" 
                android:textColor="@color/bottom_text"
                android:textSize="@dimen/bottom_textsize"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_finding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
             android:paddingTop="5dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btn_finding"
                android:layout_width="@dimen/bottom_button_width"
                android:layout_height="@dimen/bottom_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/fx" />

            <TextView
                android:id="@+id/fx_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finding"
                android:textColor="@color/bottom_text" 
                android:textSize="@dimen/bottom_textsize"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_research"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" 
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
             android:paddingTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_my_research"
                android:layout_width="@dimen/bottom_button_width"
                android:layout_height="@dimen/bottom_button_height"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/lc" />

            <TextView
                android:id="@+id/lc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tab_process" 
                android:textColor="@color/bottom_text"
                android:textSize="@dimen/bottom_textsize"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/write_comment_layout"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/write_comment" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/search" />
    </LinearLayout>

</RelativeLayout>